--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         background: #64748b; /* cool-gray-500 */
       }
       .dark .custom-scrollbar::-webkit-scrollbar-track {
-        background: #1e293b; /* slate-800 */
+        background: #0f172a; /* slate-900 */
       }
       .dark .custom-scrollbar::-webkit-scrollbar-thumb {
         background: #475569; /* slate-600 */
@@ -45,7 +45,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-100 dark:bg-slate-900">
+  <body class="bg-slate-100 dark:bg-slate-950">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
