feat: Update UI theme to use 'gray' color palette
Refactors the application's UI to adopt a 'gray' color palette instead of 'slate'. This change impacts background colors, scrollbar styles, and text colors to provide a more consistent and visually appealing theme. Key components like the `KanbanBoard`, `Column`, and `TaskCard` have been updated to reflect these new color choices. The primary goal is to improve the overall aesthetic and user experience by standardizing the color scheme.

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
         height: 8px;
       }
       .custom-scrollbar::-webkit-scrollbar-track {
-        background: #f1f5f9; /* cool-gray-100 */
+        background: #f9fafb; /* gray-50 */
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #94a3b8; /* cool-gray-400 */
+        background: #d1d5db; /* gray-300 */
         border-radius: 10px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #64748b; /* cool-gray-500 */
+        background: #9ca3af; /* gray-400 */
       }
       .dark .custom-scrollbar::-webkit-scrollbar-track {
-        background: #0f172a; /* slate-900 */
+        background: #111827; /* gray-900 */
       }
       .dark .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #475569; /* slate-600 */
+        background: #4b5563; /* gray-600 */
       }
       .dark .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #64748b; /* slate-500 */
+        background: #6b7280; /* gray-500 */
       }
     </style>
   <script type="importmap">
@@ -45,7 +45,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-100 dark:bg-slate-950">
+  <body class="bg-gray-50 dark:bg-black">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
