--- a/index.html
+++ b/index.html
@@ -6,30 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gemini Project Board</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
+      body {
+        font-family: 'Ubuntu', sans-serif;
+      }
       /* Custom scrollbar for webkit browsers */
       .custom-scrollbar::-webkit-scrollbar {
         width: 8px;
         height: 8px;
       }
       .custom-scrollbar::-webkit-scrollbar-track {
-        background: #f9fafb; /* gray-50 */
+        background: #1C2326;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #d1d5db; /* gray-300 */
+        background: #374151;
         border-radius: 10px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #9ca3af; /* gray-400 */
-      }
-      .dark .custom-scrollbar::-webkit-scrollbar-track {
-        background: #111827; /* gray-900 */
-      }
-      .dark .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #4b5563; /* gray-600 */
-      }
-      .dark .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #6b7280; /* gray-500 */
+        background: #4B5563;
       }
     </style>
   <script type="importmap">
@@ -46,7 +43,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-50 dark:bg-black">
+  <body class="bg-[#1C2326]">
     <div id="root"></div>
     <div id="notification-root"></div>
     <script type="module" src="/index.tsx"></script>
