--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^18.2.0/",
     "react-beautiful-dnd": "https://aistudiocdn.com/react-beautiful-dnd@^13.1.1",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.45.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.0",
     "react-dom": "https://aistudiocdn.com/react-dom@^18.2.0"
   }
 }
