--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
         background: #4B5563;
       }
+      /* Hide scrollbar for chat textarea */
+      .chat-textarea::-webkit-scrollbar {
+        display: none;
+      }
+      .chat-textarea {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+      }
     </style>
   <script type="importmap">
 {
