feat: Implement sprint management and task import
Introduce new features for managing project sprints and importing tasks from files. This includes:
- **Sprint Management:** New `Sprint` type in `types.ts` and the addition of `sprints` to the `Project` interface.
- **Task Import:** Integration with Gemini API via `geminiService` to generate tasks from file content. A `TaskImportDropzone` component is added to facilitate file uploads and task confirmation.
- **UI Enhancements:** Minor styling adjustments in `index.html` for select options and new icons added to `App.tsx` and `components/KanbanBoard.tsx`.
- **Column Improvements:** Enhanced `Column` component with new props for sprints and users, and implemented a confirmation modal for column deletion.
- **Bulk Actions:** Preparation for bulk actions by adding `selectedTaskIds` to `Column` and related components.
- **Export Functionality:** Added `exportAugmentedTasksToCsv` utility for exporting task data.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
       }
+      select option {
+        background: #1C2326;
+        color: white;
+      }
     </style>
   <script type="importmap">
 {
