--- a/index.html
+++ b/index.html
@@ -12,32 +12,24 @@
     <style>
       body {
         font-family: 'Ubuntu', sans-serif;
+        background-color: #1C2326;
       }
-      /* Custom scrollbar for webkit browsers */
       .custom-scrollbar::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
+        width: 6px;
+        height: 6px;
       }
       .custom-scrollbar::-webkit-scrollbar-track {
-        background: #1C2326;
+        background: transparent;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #374151;
+        background: rgba(255,255,255,0.1);
         border-radius: 10px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #4B5563;
-      }
-      /* Hide scrollbar for chat textarea */
-      .chat-textarea::-webkit-scrollbar {
-        display: none;
-      }
-      .chat-textarea {
-        -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
+        background: rgba(255,255,255,0.2);
       }
       select option {
-        background: #1C2326;
+        background: #131C1B;
         color: white;
       }
     </style>
@@ -55,7 +47,7 @@
 }
 </script>
 </head>
-  <body class="bg-[#1C2326]">
+  <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
