feat: Update favicon to Graphynovus logo
Replaces the generic "Union" icon with the official Graphynovus logo in the favicon. This improves brand recognition and visual identity.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://zcxsscvheqidzvkhlnwz.supabase.co/storage/v1/object/public/Default%20image/Union%20(1).png" />
+    <link rel="icon" type="image/png" href="https://zcxsscvheqidzvkhlnwz.supabase.co/storage/v1/object/public/Default%20image/Graphynovus%20Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Graphynovus | Gemini Project Board</title>
     <script src="https://cdn.tailwindcss.com"></script>
